<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.user.UserActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:gravity="center"
                android:text="Loan Request"
                android:textSize="19sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/editTextFullName"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="35dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/ic_gray_edit_text"
                android:ems="10"
                android:gravity="top"
                android:hint="@string/define_purpose"
                android:inputType="textPersonName"
                android:paddingLeft="10dp" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:layout_marginBottom="10dp"
                android:background="@drawable/ic_gray_edit_text"
                android:ems="10"
                android:hint="@string/amount"
                android:inputType="textPersonName"
                android:paddingLeft="10dp" />

            <EditText
                android:id="@+id/editTextBirthday"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:layout_marginBottom="10dp"
                android:background="@drawable/ic_gray_edit_text"
                android:ems="10"
                android:hint="@string/time"
                android:inputType="textPersonName"
                android:paddingLeft="10dp" />

            <EditText
                android:id="@+id/editTextUsername"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:layout_marginBottom="10dp"
                android:background="@drawable/ic_gray_edit_text"
                android:ems="10"
                android:hint="Intrest"
                android:inputType="textPersonName"
                android:paddingLeft="10dp" />


            <Button
                android:id="@+id/buttonSubmit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:layout_marginRight="7dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@drawable/ic_blue_button"
                android:text="@string/submit_request"
                android:textColor="@color/white" />


        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>